[package]
name = "workshop-cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.10.1"
keyvalues-parser = "0.1.0"
snailquote = "0.3.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
